--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lyrics-structure": "^1.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "vite-plugin-pwa": "^1.0.0",
-    "workbox-window": "^7.3.0"
+    "react-use": "^17.6.0",
+    "vite-plugin-pwa": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.3",
     "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
