--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm run generate:lyrics && tsc -b && vite build",
+    "generate:lyrics": "tsx scripts/buildLyricsData.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "lyrics-structure": "^1.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.9.1",
     "react-use": "^17.6.0"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
+    "tsx": "^4.20.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
